removed unwanted files

--- a/qurantrans.tex
+++ b/qurantrans.tex
@@ -65,10 +65,10 @@
 
 % define fonts for other languages
 \newfontfamily\arabicfont[Script=Arabic,Scale=2]{Scheherazade}
-\newfontfamily\devanagarifont[Script=Devanagari]{Lohit Devanagari}
-\newfontfamily\greekfont[Script=Greek]{GFS Artemisia}
-\newfontfamily\thaifont[Script=Thai]{FreeSerif}
-\newfontfamily\malayalamfont[Script=Malayalam]{AnjaliOldLipi}
+%\newfontfamily\devanagarifont[Script=Devanagari]{Lohit Devanagari}
+%\newfontfamily\greekfont[Script=Greek]{GFS Artemisia}
+%\newfontfamily\thaifont[Script=Thai]{FreeSerif}
+\newfontfamily\malayalamfont[Script=Malayalam]{Meera}
 
 
 
