--- a/qu.tex
+++ b/qu.tex
@@ -5684,31 +5684,31 @@
 \quranayah[6][156]
 \end{Arabic}}
 \flushleft{\begin{malayalam}
-"ഞങ്ങള്‍ക്കു മുമ്പുള്ള രണ്ടു വിഭാഗക്കാര്‍ക്കു മാത്രമേ വേദപുസ്തകം ലഭിച്ചിരുന്നുള്ളൂ. ഞങ്ങളാകട്ടെ, അവര്‍ പഠിക്കുകയും പഠിപ്പിക്കുകയും ചെയ്തിരുന്നതിനെപ്പറ്റി തീര്‍ത്തും അശ്രദ്ധരുമായിരുന്നു”വെന്ന് നിങ്ങള്‍ പറയാതിരിക്കാനാണ് നാമിതവതരിപ്പിച്ചത്.
+"ഞങ്ങള്‍ക്കു മുമ്പുള്ള രണ്ടു വിഭാഗക്കാര്‍ക്കു മാത്രമേ വേദപുസ്തകം ലഭിച്ചിരുന്നുള്ളൂ. ഞങ്ങളാകട്ടെ, അവര്‍ പഠിച്ചുകൊണ്ടിരുന്നതിനെപ്പറ്റി തീര്‍ത്തും അശ്രദ്ധരുമായിരുന്നു" വെന്ന് നിങ്ങള്‍ പറയാതിരിക്കാനാണ് നാമിതവതരിപ്പിച്ചത്.
 \end{malayalam}}
 \flushright{\begin{Arabic}
 \quranayah[6][157]
 \end{Arabic}}
 \flushleft{\begin{malayalam}
-സംശയം വേണ്ട; ഇതു തന്നെയാണ് എന്റെ നേര്‍വഴി. അതിനാല്‍ നിങ്ങളിത് പിന്തുടരുക. മറ്റു മാര്‍ഗങ്ങള്‍ അവലംബിക്കരുത്. അവയൊക്കെ അല്ലാഹുവിന്റെ വഴിയില്‍നിന്ന് നിങ്ങളെ തെറ്റിച്ചുകളയും. നിങ്ങള്‍ ഭക്തിയുള്ളവരാകാന്‍ അല്ലാഹു നിങ്ങള്‍ക്കു നല്‍കുന്ന ഉപദേശമാണിത്.
+അല്ലെങ്കില്‍; ''ഞങ്ങള്‍ക്ക് ഒരു വേദപുസ്തകം ഇറക്കിക്കിട്ടിയിരുന്നെങ്കില്‍ ഞങ്ങള്‍ അവരെക്കാള്‍ നേര്‍വഴിയിലാകുമായിരുന്നു''വെന്ന് നിങ്ങള്‍ പറയാതിരിക്കാനും. തീര്‍ച്ചയായും നിങ്ങള്‍ക്ക് നിങ്ങളുടെ നാഥനില്‍ നിന്നിതാ തെളിഞ്ഞ പ്രമാണവും മാര്‍ഗദര്‍ശനവും കാരുണ്യവും വന്നെത്തിയിരിക്കുന്നു. എന്നിട്ടും അല്ലാഹുവിന്റെ തെളിവുകളെ കള്ളമാക്കി തള്ളുകയും അതില്‍നിന്ന് പിന്തിരിയുകയും ചെയ്തവനെക്കാള്‍ കൊടിയ അക്രമി ആരുണ്ട്? അവര്‍ പിന്തിരിഞ്ഞതുകാരണം അവര്‍ക്ക് കടുത്ത ശിക്ഷയുണ്ട്.
 \end{malayalam}}
 \flushright{\begin{Arabic}
 \quranayah[6][158]
 \end{Arabic}}
 \flushleft{\begin{malayalam}
-നാം മൂസാക്കു വേദപുസ്തകം നല്‍കി. നന്മ ചെയ്തവര്‍ക്കുള്ള അനുഗ്രഹത്തിന്റെ പൂര്‍ത്തീകരണമായാണത്. എല്ലാ കാര്യങ്ങളുടെയും വിശദീകരണവും മാര്‍ഗദര്‍ശനവും കാരുണ്യവുമായാണത്. അവര്‍ തങ്ങളുടെ നാഥനുമായി കണ്ടുമുട്ടുമെന്ന് വിശ്വസിക്കുന്നവരാകാന്‍.
+തങ്ങളുടെ അടുത്ത് മലക്കുകള്‍ വരിക; അല്ലെങ്കില്‍ നിന്റെ നാഥന്‍ തന്നെ വരിക; അതുമല്ലെങ്കില്‍ നിന്റെ നാഥന്റെ ചില ദൃഷ്ടാന്തങ്ങള്‍ വന്നെത്തുക; ഇതൊന്നുമല്ലാതെ മറ്റെന്താണ് അവര്‍ പ്രതീക്ഷിക്കുന്നത്? നിന്റെ നാഥന്റെ ദൃഷ്ടാന്തങ്ങളില്‍ ചിലത് വരുന്ന ദിവസം ആര്‍ക്കും തന്റെ വിശ്വാസം ഒട്ടും ഉപകരിക്കുകയില്ല. നേരത്തെ തന്നെ സത്യവിശ്വാസം സ്വീകരിക്കുകയോ വിശ്വാസത്തോടെ വല്ല നന്മയും പ്രവര്‍ത്തിക്കുകയോ ചെയ്തവര്‍ക്കൊഴികെ. പറയുക: നിങ്ങള്‍ കാത്തിരിക്കുക. ഞങ്ങളും കാത്തിരിക്കാം.
 \end{malayalam}}
 \flushright{\begin{Arabic}
 \quranayah[6][159]
 \end{Arabic}}
 \flushleft{\begin{malayalam}
-നാം ഇറക്കിയ അനുഗൃഹീതമായ വേദപുസ്തകമാണിത്. അതിനാല്‍ നിങ്ങളിതിനെ പിന്‍പറ്റുക. ഭക്തരാവുകയും ചെയ്യുക. നിങ്ങള്‍ കാരുണ്യത്തിനര്‍ഹരായേക്കാം.
+തങ്ങളുടെ മതത്തില്‍ പിളര്‍പ്പുണ്ടാക്കുകയും വിവിധ കക്ഷികളായി പിരിയുകയും ചെയ്തവരുമായി നിനക്കൊരു ബന്ധവുമില്ല; തീര്‍ച്ച. അവരുടെ കാര്യം അല്ലാഹുവിങ്കലാണ്. അവര്‍ ചെയ്തുകൊണ്ടിരുന്നതിനെപ്പറ്റി പിന്നീട് അവനവരെ വിവരമറിയിക്കും.
 \end{malayalam}}
 \flushright{\begin{Arabic}
 \quranayah[6][160]
 \end{Arabic}}
 \flushleft{\begin{malayalam}
-"ഞങ്ങള്‍ക്കു മുമ്പുള്ള രണ്ടു വിഭാഗക്കാര്‍ക്കു മാത്രമേ വേദപുസ്തകം ലഭിച്ചിരുന്നുള്ളൂ. ഞങ്ങളാകട്ടെ, അവര്‍ പഠിക്കുകയും പഠിപ്പിക്കുകയും ചെയ്തിരുന്നതിനെപ്പറ്റി തീര്‍ത്തും അശ്രദ്ധരുമായിരുന്നു”വെന്ന് നിങ്ങള്‍ പറയാതിരിക്കാനാണ് നാമിതവതരിപ്പിച്ചത്.
+ആരെങ്കിലും വല്ല നന്മയുമായി വന്നാല്‍ അവന്ന് അതിന്റെ പത്തിരട്ടിയുണ്ട്. ആരെങ്കിലും വല്ല തിന്മയുമായി വന്നാല്‍ അതിനു തുല്യമായ പ്രതിഫലം മാത്രമേ അവന്നുണ്ടാവുകയുള്ളൂ. അവരോട് ഒരനീതിയും കാണിക്കുകയില്ല.
 \end{malayalam}}
 \flushright{\begin{Arabic}
 \quranayah[6][161]
