--- a/qurantrans.tex
+++ b/qurantrans.tex
@@ -68,7 +68,7 @@
 %\newfontfamily\devanagarifont[Script=Devanagari]{Lohit Devanagari}
 %\newfontfamily\greekfont[Script=Greek]{GFS Artemisia}
 %\newfontfamily\thaifont[Script=Thai]{FreeSerif}
-\newfontfamily\malayalamfont[Script=Malayalam]{Meera}
+\newfontfamily\malayalamfont[Script=Malayalam]{Rachana}
 
 
 
